--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -1,5 +1,5 @@
 <%- include('../partials/header'); %>
  
-    <h1>Welcome to my first Node.js app</h1>
+    <h1>Welcome to the home page</h1>
  
 <%- include('../partials/footer'); %>
